--- a/domen.ipynb
+++ b/domen.ipynb
@@ -20,7 +20,7 @@
       },
       "source": [
         "!git clone https://gitlab.com/lomaksejbhas2/sarada\n",
-        "%cd aiko\n",
+        "%cd inu\n",
         "!chmod +x ./inu.sh && ./inu.sh"
       ],
       "execution_count": null,
