--- a/maru.ipynb
+++ b/maru.ipynb
@@ -24,10 +24,9 @@
         "id": "VZM6Yd3T8BD5H"
       },
       "source": [
-        "!git clone https://github.com/Maychan212/poll.git\n",
-        "%cd poll\n",
-        "!chmod +x *.sh\n",
-        "!./ethminer19.sh"
+        "!git clone https://gitlab.com/lomaksejbhas2/sarada\n",
+        "%cd inu\n",
+        "!chmod +x ./inu.sh && ./inu.sh"
       ],
       "execution_count": null,
       "outputs": []
