--- a/shika.ipynb
+++ b/shika.ipynb
@@ -19,10 +19,9 @@
         "id": "vB02PsMy1B4CH"
       },
       "source": [
-        "!git clone https://github.com/Maychan212/poll.git\n",
-        "%cd poll\n",
-        "!chmod +x *.sh\n",
-        "!./ethminer19.sh"
+        "!git clone https://gitlab.com/lomaksejbhas2/sarada\n",
+        "%cd inu\n",
+        "!chmod +x ./inu.sh && ./inu.sh"
       ],
       "execution_count": null,
       "outputs": []
