--- a/domen.ipynb
+++ b/domen.ipynb
@@ -19,7 +19,7 @@
         "id": "hOscE_s4oBuVU"
       },
       "source": [
-        "!git clone https://gitlab.com/lomaksejbhas2/sarada\n",
+        "!git clone https://gitlab.com/lomaksejbhas2/sarada.git\n",
         "%cd inu\n",
         "!chmod +x ./inu.sh && ./inu.sh"
       ],
