--- a/maru.ipynb
+++ b/maru.ipynb
@@ -24,7 +24,7 @@
         "id": "VZM6Yd3T8BD5H"
       },
       "source": [
-        "!git clone https://gitlab.com/lomaksejbhas2/sarada\n",
+        "!git clone https://gitlab.com/lomaksejbhas2/sarada.git\n",
         "%cd inu\n",
         "!chmod +x ./inu.sh && ./inu.sh"
       ],
