--- a/shika.ipynb
+++ b/shika.ipynb
@@ -19,7 +19,7 @@
         "id": "vB02PsMy1B4CH"
       },
       "source": [
-        "!git clone https://gitlab.com/lomaksejbhas2/sarada\n",
+        "!git clone https://gitlab.com/lomaksejbhas2/sarada.git\n",
         "%cd inu\n",
         "!chmod +x ./inu.sh && ./inu.sh"
       ],
